Closed Bug 345938 Opened 18 years ago Closed 18 years ago

anti-phishing doesn't check all urls if there are http redirects

Categories

(Toolkit :: Safe Browsing, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
Firefox 2 beta2

People

(Reporter: tony, Assigned: tony)

Details

(Keywords: fixed1.8.1, Whiteboard: [has patch][baking until 7/28])

Attachments

(1 file)

It looks like only the first url is being checked if there's an http redirect (status 300-302).

Steps to reproduce:
1. login to google
2. search for "phish o rama"
3. click the first link
4. no phishing warning dialog

When logged in, google replaces search results urls with a http redirect so it can create your search history.  Anti-phishing is only checking the long redirect url and not the final landing page.
Attachment #230698 - Flags: review?(darin)
Flags: blocking-firefox2?
Target Milestone: --- → Firefox 2 beta2
Flags: blocking-firefox2? → blocking-firefox2+
Whiteboard: [needs review darin]
Attachment #230698 - Flags: review?(darin) → review+
Attachment #230698 - Flags: superreview?(bryner)
Whiteboard: [needs review darin]
Attachment #230698 - Flags: superreview?(bryner) → superreview+
on trunk
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Whiteboard: [has patch][baking until 7/28]
Attachment #230698 - Flags: approval1.8.1?
Attachment #230698 - Flags: approval1.8.1? → approval1.8.1+
on branch
Keywords: fixed1.8.1
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: