Bug 345938: anti-phishing doesn't check all urls if there are http redirects patch: listen for all document requests r=darin,sr=bryner